@startuml
'https://plantuml.com/class-diagram
left to right direction

package Interfaces {
    class InventoryController
    class SkuController
}

package Application {
    interface InventoryApplicationService
    class InventoryApplicationServiceImpl
    interface SkuApplicationService
    class SkuApplicationServiceImpl
}

package Domain {
    interface InventoryDomainService
    class InventoryDomainServiceImpl
'    interface SkuDomainService
'    class SkuDomainServiceImpl
    abstract Basic {
        private Long id;
    }
    class Inventory {
        private Long skuId;
        private InventoryType type;
        private Integer quantity;
        private List<InventoryChangeRecord> changeRecords;
        private LocalDateTime createdAt;
        private LocalDateTime updatedAt;
    }
    class InventoryChangeRecord {
        private Long inventoryId;
        private OperationType operationType;
        private Integer previousQuantity;
        private Integer newQuantity;
        private LocalDateTime createdAt;
        private String notes;
    }
    interface InventoryRepository
    class Sku {
        private String code;
        private String name;
        private String description;
        private InventoryRule inventoryRule;
        private LocalDateTime createdAt;
        private LocalDateTime updatedAt;
    }
    class InventoryRule {
        private Integer maximumOnShelf;
        private Integer minimumOnShelf;
        private Integer maximumInWarehouse;
        private Integer minimumInWarehouse;
    }
    interface SkuRepository
}

package Infrastructure {
    class InventoryRepositoryImpl
    class SkuRepositoryImpl
}

InventoryController --> InventoryApplicationService
InventoryApplicationServiceImpl ..|> InventoryApplicationService
InventoryApplicationServiceImpl --> InventoryDomainService
InventoryApplicationServiceImpl --> Inventory
InventoryDomainServiceImpl ..|> InventoryDomainService
InventoryDomainService --> Inventory
InventoryDomainServiceImpl --> Inventory
InventoryDomainServiceImpl --> InventoryRepository
InventoryRepositoryImpl ..|> InventoryRepository
Inventory --|> Basic
InventoryChangeRecord --|> Basic

SkuController --> SkuApplicationService
SkuApplicationServiceImpl ..|> SkuApplicationService
'SkuApplicationServiceImpl --> SkuDomainService
SkuApplicationServiceImpl --> Sku
'SkuDomainServiceImpl ..|> SkuDomainService
'SkuDomainService --> Sku
'SkuDomainServiceImpl --> Sku
'SkuDomainServiceImpl --> SkuRepository
SkuRepositoryImpl ..|> SkuRepository
Sku --|> Basic
Sku --> InventoryRule
@enduml